force-app/main/default/objects/HP_Parameters__c/HP_Parameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>HP_Parameters</label>
</CustomObject>