force-app/main/default/objects/HP_Parameters__c/fields/consumer_Emailing_Batch__c.field-meta.xml
<CustomField>
    <fullName>consumer_Emailing_Batch__c</fullName>
    <description>L’identifiant de la source consommant le service getEmails de pilotage permettant la distinction des différent consommateur.</description>
    <label>consumer_Emailing_Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>