force-app/main/default/objects/HP_Parameters__c/fields/Cycle_Purge_Log__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Purge_Log__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Cycle Purge Log</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>