force-app/main/default/objects/HP_Parameters__c/fields/date_Emailing_Batch__c.field-meta.xml
<CustomField>
    <fullName>date_Emailing_Batch__c</fullName>
    <description>store last Execution ok api Pilotage getEmails HP_Emailing_BATCH</description>
    <label>date_Emailing_Batch</label>
    <type>DateTime</type>
</CustomField>