force-app/main/default/objects/HP_Parameters__c/fields/source_Emailing_Batch__c.field-meta.xml
<CustomField>
    <fullName>source_Emailing_Batch__c</fullName>
    <description>L’identifiant de la source qui a envoyé le mail du service GetEmails de pilotage. Si NULL  le filtre ne sera pas actif.</description>
    <label>source_Emailing_Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>